# vobo

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md  SYSTEM.md
.github/: CODEOWNERS
.github/workflows/: vobo-build-feat.yaml  vobo-build-full.yaml  vobo-build-main.yaml  vobo-build.yaml  vobo-clone-main.yaml
inc/: colored_output_strings.h  ebo.h  error_display.h  main_window.h  renderer.h  shader.h  shader_loader.h  utils.h  vao.h  vbo.h  vertex_array.h  vertex_buffer.h  vertex_buffer_layout.h
sandbox/: CMakeLists.txt
sandbox/inc/: sandbox.h
sandbox/src/: sandbox.cpp
src/: ebo.cpp  error_display.cpp  main_window.cpp  renderer.cpp  shader.cpp  shader_loader.cpp  shaders.shader  test.cpp  triangle.cpp  vao.cpp  vbo.cpp  vertex_array.cpp  vertex_buffer.cpp
src/assets/shaders/: shaders.shader
vobo/: CMakeLists.txt
vobo/assets/shaders/: pyramid.glsl  square.glsl
vobo/inc/: common.h  element_buffer.h  error_display.h  log.h  main_window.h  orthographic_camera.h  perspective_camera.h  renderer.h  shader.h  texture.h  vertex_buffer_layout.h  vobo.h  vobo_pch.h  vobo_types.h
vobo/src/: element_buffer.cpp  error_display.cpp  index_buffer.cpp  main_window.cpp  orthographic_camera.cpp  perspective_camera.cpp  renderer.cpp  shader.cpp  vertex_buffer_layout.cpp  vobo.h  vobo_math.cpp
vobo/src/cameras/: CMakeLists.txt  camera.h  cameras.h  orthographic_camera.cpp  orthographic_camera.h  perspective_camera.cpp  perspective_camera.h  perspective_controller.cpp  perspective_controller.h
vobo/src/core/: CMakeLists.txt  application.cpp  application.h  colored_output_strings.h  core.h  error_display.cpp  error_display.h  log.h  vobo_math.cpp  vobo_math.h  vobo_memory.h  vobo_pch.h
vobo/src/entities/primitives/: CMakeLists.txt  cube.cpp  ico_sphere.cpp  ico_sphere.h  mesh_object.h  primitives.h  pyramid.cpp
vobo/src/renderer/: CMakeLists.txt  renderer.cpp  renderer.h  shader.h  texture.cpp  texture.h
vobo/src/renderer/primitives/: cube.h  ico_sphere.cpp  mesh_object.h  primitive.h  primitive_library.cpp  primitive_library.h  pyramid.cpp  pyramid.h
vobo/src/renderer/vertices/: CMakeLists.txt  index_buffer.cpp  index_buffer.h  static_index_buffer.cpp  static_index_buffer.h  static_vertex_buffer.cpp  static_vertex_buffer.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h  vertex_buffer_layout.h  vertices.h
vobo/src/window/: CMakeLists.txt  event_handler.cpp  event_handler.h  window.cpp  window.h  window_events.cpp  window_events.h
vobo/tests/: CMakeLists.txt  test.cpp
